# MultiSensorsAutomaticCalibration

./: CMakeLists.txt  README.md
doc/: ProblemIntroduction.docx  equations.docx
src/: main.cxx
